@@ -1,5 +1,10 @@
 2012-04-06  Moritz Bunkus  <moritz@bunkus.org>
 
+	* mmg: new feature: Added GUI controls for mkvmerge's "file
+	concatenation" feature as "additional file parts". The user can
+	chose which individual files are treated as if they were a single
+	huge source file.
+
 	* mkvmerge: bug fix: The handling of the "do not read other files"
 	options (e.g. "=file.vob" and "( file.vob )") was broken for MPEG
 	program stream files.
